--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "dev": "vite front/elearning ",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "cross-env set NODE_ENV=dev && nodemon server/"
+    "server": "cross-env set NODE_ENV=dev && nodemon sever/"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
@@ -21,6 +21,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.1",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
@@ -29,9 +30,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "sweetalert2": "^11.7.1"
   },
-
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
