--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
@@ -24,6 +29,7 @@
     "js-cookie": "^3.0.1",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
@@ -31,7 +37,9 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "sequelize": "^6.28.0",
-    "sweetalert2": "^11.7.1"
+    "styled-components": "^5.3.6",
+    "sweetalert2": "^11.7.1",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
